...
        <LinearLayout android:id="@+id/session_title_row"
            android:layout_alignParentLeft="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView android:id="@+id/session_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/ListItemTitle"
                />
            <TextView android:id="@+id/session_bof_label"
...
